oss/01-getting-started/http-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  parentRefs:
  - name: http
    namespace: kgateway-system
  hostnames:
  - www.example.com
  rules:
  - backendRefs:
    - name: httpbin
      port: 8000
